--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ button:hover {
 }
 
 footer {
-    background-color: #5d4037;
+    background-color: #ff9d15;
     color: #fff;
     text-align: center;
     padding: 1rem 0;
