--- a/css/stylepromocion.css
+++ b/css/stylepromocion.css
@@ -131,6 +131,11 @@
     text-align: center;
     padding: 10px;
   }
+
+  #alerta p {
+    margin-bottom: 0px;
+  }
+
   
   /* Sección hero */
   .hero {
@@ -150,6 +155,10 @@
   .productos h2, .promociones h2 {
     text-align: center;
     margin-bottom: 20px;
+  }
+
+  .countdown h2 {
+    font-size: 1.6em;
   }
   
   /* Grid para productos */
